samples/_failures_safe/1761722012_da2c33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1f805ce.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_f1f805ce.c:145:9: error: expected declaration or statement at end of input
  145 |         if (lexer_peek(lexer) == '"') {
      |         ^~
./samples/SAFE/__tmp_f1f805ce.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1f805ce.c:145:9: error: expected declaration or statement at end of input
